# opengl_primary

./: .gitignore  README.md  glad.c
1.test/: CMakeLists.txt  main.cpp
1.test/funcs/: CMakeLists.txt  func.cpp  func.h
10.color_triangle/: CMakeLists.txt  main.cpp
10.color_triangle/common/src/: check_err.cpp
11.shader_package/: CMakeLists.txt  main.cpp
11.shader_package/application/: Application.h  CMakeLists.txt
11.shader_package/assets/shaders/: fragment.glsl  vertex.glsl
11.shader_package/glframework/: shader.cpp
11.shader_package/glframework/include/: shader.h
12.uniform_test/: CMakeLists.txt  main.cpp
12.uniform_test/assets/shaders/: fragment.glsl  vertex.glsl
12.uniform_test/common/src/: check_err.cpp
12.uniform_test/glframework/: shader.cpp
12.uniform_test/glframework/include/: shader.h
13.practice/: CMakeLists.txt  main.cpp
13.practice/assets/shaders/: fragment.glsl  vertex.glsl
13.practice/common/: CMakeLists.txt
13.practice/glframework/: shader.cpp
13.practice/glframework/include/: shader.h
14.texture/: main.cpp
14.texture/application/: Application.h
14.texture/assets/shaders/: fragment.glsl
14.texture/glframework/include/: core.h  shader.h
14.texture_test/: CMakeLists.txt  main.cpp
14.texture_test/application/: Application.cpp
14.texture_test/assets/shaders/: vertex.glsl
14.texture_test/common/include/: common.h
15.texture_practice/: CMakeLists.txt  main.cpp
16.texture/: main.cpp
16.texture/assets/shaders/: vertex.glsl
16.texture/common/include/: common.h
16.texture/glframework/: texture.cpp
16.texture/glframework/include/: texture.h
17.texture_blend/: CMakeLists.txt  main.cpp
17.texture_blend/assets/shaders/: vertex.glsl
17.texture_blend/glframework/: texture.cpp
18.mipmap_test/: CMakeLists.txt  main.cpp
18.mipmap_test/assets/shaders/: fragment.glsl  vertex.glsl
18.mipmap_test/glframework/: texture.cpp
19.mipmap_manual_sample/: CMakeLists.txt  main.cpp
19.mipmap_manual_sample/assets/shaders/: fragment.glsl
19.mipmap_manual_sample/glframework/: texture.cpp
2.glfw_test/: CMakeLists.txt  main.cpp
20.mipmap/: CMakeLists.txt  main.cpp
20.mipmap/glframework/: shader.cpp  texture.cpp
20.mipmap/glframework/include/: texture.h
21.glm_test/: CMakeLists.txt  main.cpp
21.glm_test/assets/shaders/: fragment.glsl
21.glm_test/glframework/include/: shader.h
22.mat_transform/: CMakeLists.txt  main.cpp
22.mat_transform/glframework/: shader.cpp
22.mat_transform/glframework/include/: core.h  shader.h
23.rotate_reduction/: rotate.md
24.glm_superpose_test/: CMakeLists.txt  main.cpp
24.glm_superpose_test/assets/shaders/: vertex.glsl
25.viewMatrix_reduction/: viewMatrix.md
26.viewMatrix_test/: CMakeLists.txt  main.cpp
26.viewMatrix_test/assets/shaders/: vertex.glsl
27.orthographic/: CMakeLists.txt  main.cpp
27.orthographic/application/: Application.cpp
28.orthographic/assets/shaders/: fragment.glsl  vertex.glsl
28.orthographic/common/include/: check_err.h  common.h
28.orthographic/common/src/: common.cpp
28.orthographic/glframework/: shader.cpp
28.orthographic/glframework/include/: shader.hpp  texture.h
3.glad_test/: CMakeLists.txt  main.cpp
3.glad_test/common/src/: check_err.cpp
30.perspective/: main.cpp
30.perspective/application/: Application.h
30.perspective/glframework/: texture.cpp
31.camera_system/: CMakeLists.txt  main.cpp
31.camera_system/application/: CMakeLists.txt
31.camera_system/application/app/: Application.cpp  Application.h
31.camera_system/application/camera/: cameraControl.cpp  gameCameraController.cpp  orthographicCamera.cpp  perspectiveCamera.cpp  trackballCameraController.cpp
31.camera_system/application/camera/include/: camera.h  cameraControl.h  gameCameraController.h  orthographicCamera.h  perspectiveCamera.h  trackballCameraController.h
32.deep_detect/: CMakeLists.txt
32.deep_detect/application/camera/: gameCameraController.cpp
32.deep_detect/application/camera/include/: orthographicCamera.h
32.deep_detect/glframework/: CMakeLists.txt
33.geometry/: CMakeLists.txt  main.cpp
33.geometry/application/: CMakeLists.txt
33.geometry/application/camera/: camera.cpp  perspectiveCamera.cpp  trackballCameraController.cpp
33.geometry/assets/shaders/: fragment.glsl  vertex.glsl
33.geometry/glframework/: geometry.cpp
33.geometry/glframework/include/: geometry.h
4.application/: CMakeLists.txt  main.cpp
4.application/Application/: Application.cpp
4.application/Application/include/: Application.h
4.application/common/: CMakeLists.txt
5.vbo_test/: CMakeLists.txt  main.cpp
6.vao_test/: CMakeLists.txt  main.cpp
6.vao_test/common/include/: common.h
7.shader/: CMakeLists.txt  main.cpp
7.shader/common/include/: common.h
8.shader_draw/: CMakeLists.txt  main.cpp
8.shader_draw/Application/: Application.cpp
8.shader_draw/common/src/: common.cpp
9.ebo/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt
